fix[PDI-20831]: add unit tests